Fix image alignmenbt issue.

--- a/app/assets/stylesheets/components/editorial/_media.scss
+++ b/app/assets/stylesheets/components/editorial/_media.scss
@@ -3,10 +3,6 @@ img {
   margin-bottom: $bl*2;
 }
 
-p img {
-  float:right;
-}
-
 .video-wrapper {
   //http://alistapart.com/article/creating-intrinsic-ratios-for-video
   clear: both;
